# gallery-grid-organizer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
app/: settings.py  urls.py  wsgi.py
app/settings/: dev.py  production.py  settings.py
gallery/: apps.py  constants.py  models.py  serializers.py  signals.py  urls.py  utils.py
gallery/migrations/: 0001_initial.py  0002_alter_image_options.py  0003_alter_image_weight.py
gallery/services/: events_service.py  image_service.py
gallery/tests/: test_create_visit_reorder_weight.py  test_models.py  test_serializers.py  test_services.py  test_views.py
gallery/tests/e2e/: test_create_visit_reorder_weight.py
gallery/tests/models/: test_models.py
gallery/tests/serializers/: test_serializers.py
gallery/tests/services/: test_services.py
gallery/tests/views/: test_views.py
gallery/views/: events_view.py  image_view.py
